--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -31,6 +31,10 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      # Lint code
+      - name: Lint code
+        run: npm run lint
+
       # Run tests
       - name: Run tests
         run: npm run test
